# orders-project

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: backend-ci-checks.yaml  docker-build.yaml  docker-publish.yaml  docs.yaml  frontend-linters.yaml
charts/orders-project/: Chart.yaml  values.yaml
charts/orders-project/charts/delivery/: values.yaml
charts/orders-project/charts/frontend/: values.yaml
charts/orders-project/charts/mongodb/: Chart.yaml  values.yaml
charts/orders-project/dashboards/: application-logs.json
charts/orders-project/templates/: grafana-dashboards.yaml  ingress.yaml  secrets.yaml
delivery/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  ruff.toml
delivery/src/: database.py  databases.py  lifespan.py  main.py  repository.py  schemas.py  service.py  settings.py  state.py  streams.py
delivery/src/common/: __init__.py
delivery/src/common/logging/: json_formatter.py
delivery/src/config/: settings.py
delivery/src/databases/: __init__.py
delivery/src/interfaces/: __init__.py  delivery_repo_interface.py  delivery_service_interface.py
delivery/src/repositories/: __init__.py  delivery_repo.py  delivery_repository.py
delivery/src/routes/: health.py
delivery/src/services/: __init__.py  delivery_service.py
delivery/src/streams/: __init__.py  redis_stream_consumer.py  redis_stream_publisher.py
delivery/tests/: test_delivery_service.py
docs/: CNAME  architecture.md  conf.py  deployment.md  development.md  getting-started.md  index.md  monitoring.md  services.md
envs/: .gitignore  default.mongo_db.env  default.simulator.env
envs/dev/: mongo.env
envs/prod/: mongo.env  simulator.env
frontend/: .env  .env.development  .gitignore  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  router.tsx  routes.tsx  types.ts  vite-env.d.ts
frontend/src/api/: notifications.ts  notificationsSocket.ts  ordersService.ts
frontend/src/components/: Layout.tsx  Notifications.tsx  OrderTracker.tsx
frontend/src/config/: env.ts
frontend/src/hooks/: useCart.ts  useOrderTracking.ts
frontend/src/pages/: Cart.tsx  DevTools.tsx  Menu.tsx  Order.tsx  OrderTracking.tsx
frontend/src/validation/: orderSchema.tsx
infra/k8s/deployments/: delivery-deployment.yaml  frontend-deployment.yaml  notification-deployment.yaml  orders-deployment.yaml  simulator-deployment.yaml
infra/k8s/envs/: frontend-cm.yaml  mongodb-auth.yaml  mongodb-cm.yaml  redis-cm.yaml  redis-secret.yaml
infra/k8s/services/: delivery-svc.yaml  frontend-svc.yaml  ingress.yaml  notification-svc.yaml  orders-svc.yaml  simulator-svc.yaml
infra/mongo/: mongodb-secrets.yaml  mongodb-statefulset.yaml  mongodb-svc.yaml
infra/orders-project/: .gitignore  TODO.md  values.yaml
infra/orders-project/charts/: delivery-0.1.0.tgz  frontend-0.1.0.tgz  mongodb-0.1.0.tgz  notifications-0.1.0.tgz  orders-0.1.0.tgz  redis-0.1.0.tgz  simulator-0.1.0.tgz
infra/orders-project/templates/: _helpers.tpl  configs.yaml  ingress.yaml
infra/redis/: redis-secret.yaml  redis-statefulset.yaml  redis-svc.yaml
menu/: pyproject.toml
monitoring/: loki-config.yml  prometheus.yml  promtail-config.yml
monitoring/grafana/: dashboards.yml
monitoring/grafana/dashboards/: event-pipeline.json  http-metrics.json
nginx/: nginx.dev.conf  nginx.prod.conf
notifications/: Dockerfile  pyproject.toml
notifications/src/: database.py  lifespan.py  main.py  routes.py  schemas.py  service.py  settings.py  state.py  streams.py  websockets.py
notifications/src/config/: settings.py
notifications/src/database/: __init__.py  redis_connection.py
notifications/src/interfaces/: __init__.py  notification_repo_interface.py  notification_service_interface.py  order_status_ws_interface.py
notifications/src/repositories/: __init__.py  notifications_repo.py
notifications/src/routes/: __init__.py  order_tracking.py
notifications/src/schemas/: __init__.py  cache.py  delivery.py  messages.py  order.py
notifications/src/services/: __init__.py  notification_service.py
notifications/src/streams/: __init__.py  redis_stream_consumer.py
notifications/tests/: test_notification_service.py
orders/: Dockerfile  hello.py  pyproject.toml
orders/src/: database.py  databases.py  dependencies.py  lifespan.py  main.py  responses.py  schemas.py  settings.py  state.py  streams.py  utils.py
orders/src/common/: __init__.py
orders/src/common/logging/: config.toml  setup.py
orders/src/config/: __init__.py  settings.py
orders/src/databases/: __init__.py  connections.py  mongo_transaction.py
orders/src/interfaces/: __init__.py  menu_repo_interface.py  menu_service_interface.py  order_repo_interface.py  order_service_interface.py
orders/src/repositories/: __init__.py  menu_item_repo.py  order_repository.py
orders/src/routes/: __init__.py  health.py  menu.py  orders.py
orders/src/services/: __init__.py  menu_service.py  mixins.py  order_service.py
orders/src/streams/: __init__.py  redis_stream_consumer.py  redis_stream_publisher.py
orders/tests/: test_menu_service.py  test_order_service.py
scripts/: init-replica.sh  seed-data.js  setup.sh
shared/: .gitignore  pyproject.toml
shared/src/shared/: __init__.py  http_metrics.py  settings.py  types.py
shared/src/shared/db/: __init__.py  mongo.py  repository.py
shared/src/shared/logging/: __init__.py  config.toml  json_formatter.py  setup.py
shared/src/shared/redis/: __init__.py  connection.py  consumer.py  envelope.py  event_bus.py  metrics.py  publisher.py
shared/src/shared/schemas/: __init__.py  base.py
simulator/: Dockerfile  pyproject.toml
simulator/src/: main.py  schemas.py  settings.py  strategies.py  streams.py  utils.py
simulator/src/config/: __init__.py  settings.py
simulator/src/interfaces/: __init__.py  basic_simulation_interface.py  stream_consumer_interface.py  stream_publisher_interface.py
simulator/src/streams/: __init__.py  redis_stream_consumer.py
(+44 files in other folders)
