[project]
name = "orders-project-workspace"
version = "0.1.0"
description = "Workspace root for all Python services"
requires-python = ">=3.13"
dependencies = [
    "shared",
    "orders",
    "delivery",
    "notifications",
    "simulator",
]

[dependency-groups]
dev = [
    "mypy==1.15.0",
    "ruff==0.11.0",
]

[tool.uv.sources]
shared = { path = "./shared" }
orders = { path = "./orders" }
delivery = { path = "./delivery" }
notifications = { path = "./notifications" }
simulator = { path = "./simulator" }
