[project]
name = "orders-project-workspace"
version = "0.1.0"
description = "Workspace root for all Python services"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ty>=0.0.1a7",
    "ruff==0.11.0",
]

[tool.uv.workspace]
members = ["shared", "orders", "delivery", "notifications", "simulator"]
