[project]
name = "delivery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]==0.115.11",
    "motor==3.7.0",
    "pydantic==2.10.6",
    "redis==5.2.1",
]

[dependency-groups]
dev = [
    "mypy==1.15.0",
    "ruff==0.11.0",
]

[tool.mypy]
plugins = ['pydantic.mypy']
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
