[project]
name = "orders"
version = "0.1.0"
description = "Orders microservice for food delivery platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]==0.115.11",
    "pymongo>=4.10",
    "pydantic-settings>=2.8.1",
    "redis==5.2.1",
    "shared",
]

[dependency-groups]
dev = [
    "mypy==1.15.0",
    "ruff==0.11.0",
]

[tool.uv.sources]
shared = { path = "../shared" }

[tool.mypy]
plugins = ['pydantic.mypy']
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 120
target-version = "py313"
fix = false
include = [
    "src/**/*.py",
]

[tool.ruff.lint]
select = ["I", "PL", "F401", "F841", "N", "R", "E501"]
ignore = []
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
    "pydantic.validator",
    "pydantic.field_validator",
    "declared_attr",
    "expression",
    "comparator"
]
