[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shared"
version = "0.1.0"
description = "Shared library for orders-project microservices"
requires-python = ">=3.13"
dependencies = [
    "pymongo>=4.10",
    "redis>=5.2",
    "pydantic>=2.8",
    "pydantic-settings>=2.8",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a7",
    "ruff==0.11.0",
]

[tool.ty.environment]
python-version = "3.13"

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]
