[project]
name = "simulator"
version = "0.1.0"
description = "Event simulator for food delivery platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic==2.10.6",
    "pydantic-settings>=2.8.1",
    "redis==5.2.1",
    "shared",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a7",
    "ruff==0.11.0",
]

[tool.uv.sources]
shared = { path = "../shared" }

[tool.ty.environment]
python-version = "3.13"

[tool.ruff]
line-length = 120
target-version = "py313"
fix = false
include = [
    "src/**/*.py",
]

[tool.ruff.lint]
select = ["I", "PL", "F401", "F841", "N", "R", "E501"]
ignore = []
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
    "pydantic.validator",
    "pydantic.field_validator",
    "declared_attr",
    "expression",
    "comparator"
]
